<resources xmlns:tools="http://schemas.android.com/tools">
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="app_name">E-Commerce</string>
    <string name="rs"><strike>Rs 1000</strike></string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="offer"><u>Rs 40000</u></string>
    <string name="offer1"><strike>Rs 40000</strike></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rs_2500"><strike>Rs. 2500</strike></string>
    <string name="shopping_basket">Shopping Basket</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Do not have an account?</string>
    <string name="register">Register</string>
    <string name="e">E</string>
    <string name="shopping">Shopping</string>
    <string name="name">Name</string>
    <string name="job">Job</string>
    <string name="sign_up">Sign Up</string>
    <string name="account">Have an account?</string>
    <string name="login">Login</string>
    <string name="comp_sign_up">Complete Sign Up</string>
    <string name="retrieve_password">Reset Password</string>
    <string name="home_page">Home Page</string>
    <string name="first_question">Who is your favourite person ?</string>
    <string name="first_question_text">First Question</string>
    <string name="second_question_text">Second Question</string>
    <string name="second_question">What is your favourite food ?</string>
    <string name="answer_question">Please, Answer the questions</string>
    <string name="new_password">Type your new password</string>
    <string name="search" tools:ignore="TypographyEllipsis">Searching...</string>
    <string name="title_activity_maps">Map</string>
    <string name="show_current_location">Show Current Location</string>
    <string name="first_category">Mobiles</string>
    <string name="second_category">Laptops</string>
    <string name="todo">TODO</string>
    <string name="Products">Product List</string>
    <string name="zero">0</string>
    <string name="price">Total Price: </string>
    <string name="quantity">Quantity: </string>
    <string name="one">1</string>
    <string name="address">Address: </string>
    <string name="num_order">Order No: </string>
    <string name="total">Price</string>
    <string name="checkout">Checkout</string>
    <string name="success">Congratulation,your order purchase on the way</string>
</resources>