<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/ic_shopping_basket_1"
            android:layout_gravity="center"
            android:contentDescription="@string/shopping_basket"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e"
            android:textColor="@color/red"
            android:textSize="21sp"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_medium"
            android:layout_gravity="center"/>

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="italic"
        android:text="@string/shopping"
        android:gravity="center"
        android:letterSpacing="0.0625"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/white"/>
</LinearLayout>
