<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_shopping_basket_red"
            android:contentDescription="@string/shopping_basket" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/StyledTilEditText"
            android:id="@+id/usernameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="25dp"
            android:textColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:maxLength="30"
                android:maxLines="1"
                android:paddingTop="10dp"
                android:textColor="@color/txt_color"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textColorHint="@color/transparent"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/StyledTilEditText"
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:textColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingTop="10dp"
                android:textColor="@color/txt_color"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/StyledTilEditText"
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:textColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingTop="10dp"
                android:textColor="@color/txt_color"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/StyledTilEditText"
            android:id="@+id/jobLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:textColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/job"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingTop="10dp"
                android:textColor="@color/txt_color"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/account"
        android:layout_marginBottom="1dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_red_rect"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/comp_sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_txt"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/account"
        android:textColor="#b8b8cf" />

    <TextView
        android:id="@+id/bottom_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/login"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/red"
        android:textSize="15sp" />
</RelativeLayout>
