<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/ic_shopping_basket_red"
            android:contentDescription="@string/shopping_basket"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/StyledTilEditText"
            android:id="@+id/emailForgetPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:textColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailForgetPasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/roboto_regular"
                android:maxLines="1"
                android:maxLength="30"
                android:paddingTop="10dp"
                android:textColor="@color/txt_color"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_above="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/sendPasswordBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_red_rect"
            android:text="@string/retrieve_password"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="40dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"/>

    </LinearLayout>

    <TextView
        android:id="@+id/account"
        android:layout_above="@+id/registerForgetPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#b8b8cf"
        android:text="@string/no_account"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/roboto_regular" />

    <TextView
        android:id="@+id/registerForgetPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:text="@string/register"
        android:gravity="center"
        android:textSize="15sp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto_regular"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>
</RelativeLayout>
